--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.16.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
