--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^6.0.2",
     "react-query": "^3.16.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
